--- a/EasySaveProjectCode/EasySaveProject/AddFolder/AddWorkView.xaml
+++ b/EasySaveProjectCode/EasySaveProject/AddFolder/AddWorkView.xaml
@@ -6,10 +6,36 @@
       xmlns:local="clr-namespace:EasySaveProject.AddFolder"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="SaveWorkView">
+      Title="SaveWorkView"
+      Background="#EAE7DC"
+      >
 
-    <StackPanel Margin="20">
-        <TextBlock Text="Add Work" FontSize="16" FontWeight="Bold" />
-    </StackPanel>
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Grid.Row="0" Text="Nom de la sauvegarde :"/>
+        <TextBox Grid.Row="1" x:Name="txtName"/>
+
+        <TextBlock Grid.Row="2" Text="Répertoire cible :"/>
+        <TextBox Grid.Row="3" x:Name="txtTarget"/>
+
+        <TextBlock Grid.Row="4" Text="Répertoire source :"/>
+        <TextBox Grid.Row="5" x:Name="txtSource"/>
+
+        <TextBlock Grid.Row="6" Text="Type de sauvegarde :"/>
+        <TextBox Grid.Row="7" x:Name="txtType"/>
+
+        <Button Grid.Row="9"  Click="btnValider_Click" Content="Valider" Margin="0,40,0,-40" RenderTransformOrigin="0.619,-1.096"/>
+
+    </Grid>
 
 </Page>
