--- a/EasySaveProjectCode/EasySaveProject/LanguageFolder/Settings.xaml
+++ b/EasySaveProjectCode/EasySaveProject/LanguageFolder/Settings.xaml
@@ -7,8 +7,15 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Settings">
-
+    
+    <Page.DataContext>
+        <local:SettingViewModel />
+    </Page.DataContext>
+    
     <Grid>
-        <TextBlock Text="Settings" FontSize="16" FontWeight="Bold" />
+        <TextBlock Text="{Binding TranslatedText}" FontSize="16" FontWeight="Bold" />
+        <Button Content="Frensh" Margin="418,243,417,237"  Background="#D8C3A5" Command="{Binding SwitchToFrenchCommand}" />
+        <Button Content="English" Margin="418,321,417,162"  Background="#D8C3A5" Command="{Binding SwitchToEnglishCommand}"/>
+
     </Grid>
 </Page>
