--- a/EasySaveProjectCode/EasySaveProject/ExecuteFolder/ExecuteWork.xaml
+++ b/EasySaveProjectCode/EasySaveProject/ExecuteFolder/ExecuteWork.xaml
@@ -19,6 +19,9 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Content="Execute" Click="BtnExecute_Click" Margin="592,367,42,0" Height="37" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
+        <Button Content="Execute" Click="BtnExecute_Click" Margin="649,367,42,0" Height="19" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
+        <Button Content="Add Work" Command="{Binding AddWorkCommand}" Margin="381,367,319,0" Height="19" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
+        <Button Content="Settings" Command="{Binding SettingsCommand}"  Margin="134,367,599,0" Height="19" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
     </Grid>
+
 </Page>
