--- a/EasySaveProjectCode/EasySaveProject/ExecuteFolder/ExecuteWork.xaml
+++ b/EasySaveProjectCode/EasySaveProject/ExecuteFolder/ExecuteWork.xaml
@@ -9,7 +9,7 @@
       Title="ExecuteWork">
 
     <Grid>
-        <TextBlock Text="Execute Work" FontSize="16" FontWeight="Bold" />
+        <TextBlock Text="{Binding WorkList}" FontSize="16" FontWeight="Bold" />
         <ListView Name="WorkList" ItemsSource="{Binding Works}" BorderBrush="#cdcdcd" Margin="25,70,25,173" Padding="0" SelectedItem="{Binding SelectedWork, Mode=TwoWay}">
             <ListView.View>
                 <GridView>
@@ -19,7 +19,7 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Content="Execute" Click="BtnExecute_Click" Margin="649,367,42,0" Height="19" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
+        <Button Content="{Binding ExecuteButton}" Click="BtnExecute_Click" Margin="649,367,42,0" Height="19" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
         <Button Content="Add Work" Command="{Binding AddWorkCommand}" Margin="381,367,319,0" Height="19" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
         <Button Content="Settings" Command="{Binding SettingsCommand}"  Margin="134,367,599,0" Height="19" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
     </Grid>
