--- a/EasySaveProjectCode/ConsoleDeportee/ExecuteFolder/ExecuteWork.xaml
+++ b/EasySaveProjectCode/ConsoleDeportee/ExecuteFolder/ExecuteWork.xaml
@@ -10,17 +10,17 @@
       Background="#EAE7DC">
 
     <Grid>
-        <TextBlock Text="WorkList" FontSize="16" FontWeight="Bold" />
+        <TextBlock Text="{Binding WorkList}" FontSize="16" FontWeight="Bold" />
         <ListView Name="ExecuteWorkList" ItemsSource="{Binding Works}" BorderBrush="#cdcdcd" Margin="25,70,25,173" Padding="0" SelectionMode="Multiple">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="BackupName" DisplayMemberBinding="{Binding saveName }"/>
-                    <GridViewColumn Header="SourceDirectory" DisplayMemberBinding="{Binding sourceRepo}"/>
-                    <GridViewColumn Header="TargetDirectory" DisplayMemberBinding="{Binding targetRepo}"/>
+                    <GridViewColumn Header="{Binding BackupName}" DisplayMemberBinding="{Binding saveName }"/>
+                    <GridViewColumn Header="{Binding SourceDirectory}" DisplayMemberBinding="{Binding sourceRepo}"/>
+                    <GridViewColumn Header="{Binding TargetDirectory}" DisplayMemberBinding="{Binding targetRepo}"/>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Content="ExecuteButton" Click="BtnExecute_Click" Margin="649,367,42,0" Height="19" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
+        <Button Content="{Binding ExecuteButton}" Click="BtnExecute_Click" Margin="649,367,42,0" Height="19" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
         <Button Content="Add Work" Command="{Binding AddWorkCommand}" Margin="381,367,319,0" Height="19" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
         <Button Content="Settings" Command="{Binding SettingsCommand}"  Margin="134,367,599,0" Height="19" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
     </Grid>
