--- a/EasySaveProjectCode/ConsoleDeportee/LanguageFolder/Settings.xaml
+++ b/EasySaveProjectCode/ConsoleDeportee/LanguageFolder/Settings.xaml
@@ -10,9 +10,9 @@
       Background="#EAE7DC">
 
     <Grid>
-        <TextBlock Text="Hello" FontSize="16" FontWeight="Bold" />
-        <Button Content="Frensh" Margin="400,108,356,330"  Background="#D8C3A5" />
-        <Button Content="English" Margin="400,190,357,248"  Background="#D8C3A5" />
+        <TextBlock Text="{Binding TranslatedText}" FontSize="16" FontWeight="Bold" />
+        <Button Content="French" Margin="400,108,356,330"  Background="#D8C3A5" Command="{Binding SwitchToFrenchCommand}"/>
+        <Button Content="English" Margin="400,190,357,248"  Background="#D8C3A5" Command="{Binding SwitchToEnglishCommand}"/>
         <Button Content="Add work" Margin="97,388,656,52" Command="{Binding AddWorkCommand}" Background="#D8C3A5" />
         <Button Content="Execute work" Margin="608,381,135,54"  Command="{Binding ExecuteWorkCommand}" Background="#D8C3A5" RenderTransformOrigin="0.5,0.5">
         </Button>
